# win-notification-server

./: .gitignore  Cargo.toml  README.md  curl_example.ps1  send-notification.ps1
src/: main.rs
src/handlers/: mod.rs  web.rs
src/notifications/: basic.rs  mod.rs  types.rs
src/services/: clipboard.rs  manager.rs  mod.rs  registry.rs
src/utils/: auth.rs  constants.rs
